--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title%></title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/layout.css">
     <%- style%>
 </head>
@@ -13,5 +14,8 @@
     <%- include("_header")%>
     <%- body%>
     <%- include("_footer")%>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <%- script%>
 </body>
 </html>
