Added Passport Authentication and SASS

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,1 +1,8 @@
-<h3 class="footer">This is footer</h3>
+<div>
+    <div>© 2022 Bhanu Pratap Singh Rathore</div>
+
+    <div>
+        <a href="/"><li>Home</li></a>
+        <a href="/user/profile"><li>profile</li></a>
+    </div>
+</div>
