--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,14 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title%></title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Default Style Sheet -->
     <link rel="stylesheet" href="/css/layout.css">
+
+    <!-- Components Style Sheet -->
     <%- style%>
 </head>
 <body>
-    <%- include("_header")%>
-    <%- body%>
-    <%- include("_footer")%>
+    <div id="header">
+        <%- include("_header")%>
+    </div>
+
+    <div id="body">
+        <%- body%>
+    </div>
+
+    <div id="footer">
+        <%- include("_footer")%>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <%- script%>
