--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,8 +1,50 @@
-/* Body Section */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif; }
 
-body{
+/* Body Section */
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; }
+  body #header > header {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-    min-height: 100vh;
-}
+    background-color: #212529; }
+    body #header > header div {
+      padding: .3rem; }
+      body #header > header div:first-child {
+        font-size: 1.5rem;
+        color: white; }
+      body #header > header div:last-child button {
+        padding: .2rem .3rem;
+        color: white;
+        background-color: transparent;
+        border: 1px solid white;
+        cursor: pointer;
+        border-radius: 4px;
+        transition: all .2s ease-in-out; }
+        body #header > header div:last-child button:hover {
+          background-color: white;
+          color: black; }
+  body #body {
+    flex-grow: 1;
+    background-color: #f8f9fa; }
+  body #footer > div {
+    display: flex;
+    justify-content: flex-start;
+    background-color: #212529; }
+    body #footer > div div {
+      color: rgba(255, 255, 255, 0.55);
+      padding: .5rem;
+      font-size: .9rem; }
+      body #footer > div div:last-child > a {
+        text-decoration: none; }
+        body #footer > div div:last-child > a li {
+          color: rgba(255, 255, 255, 0.55);
+          list-style: none; }
+          body #footer > div div:last-child > a li:hover {
+            color: white; }
