--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,44 @@
-h2{
-    text-align: center;
+$primary-color: rgb(33,37,41);
+$font-color-dark: rgba(255, 255, 255, 0.55);
+$secondary-color: #f8f9fa;
+$success: #198754;
+
+#home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    form{
+        width: 80%;
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        border-bottom: 1px solid black;
+
+        textarea{
+            width: 80%;
+            height: 5rem;
+            background-color: $font-color-dark;
+            padding: .5rem;
+            resize: none;
+            outline: none;
+        }
+
+        input[type="submit"]{
+            padding: .3rem .5rem;
+            color: $primary-color;
+            background-color: transparent;
+            border: 1px solid $primary-color;
+            cursor: pointer;
+            border-radius: 4px;
+            transition: all .2s ease-in-out;
+
+            &:hover{
+                background-color: $success;
+                color: white;                
+                border-color: transparent;
+            }
+        }
+    }
 }
