--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -2,7 +2,7 @@
     <div>© 2022 Bhanu Pratap Singh Rathore</div>
 
     <div>
-        <a href="/"><li>Home</li></a>
+        <a href="/user/home"><li>Home</li></a>
         <a href="/user/profile"><li>profile</li></a>
     </div>
 </div>
