--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,7 +3,7 @@
 
     <div>
     <% if (locals.user){%>
-        <a href="./sign-out"><button>Sign Out</button></a>
+        <a href="./sign-out"><button data-name="sign-out">Sign Out</button></a>
     <%}else{%>
         <a href="./sign-in"><button>Sign In</button></a>
         <a href="./sign-up"><button>Sign Up</button></a>        
