--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,2 +1,30 @@
-h2 {
-  text-align: center; }
+#home {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  #home form {
+    width: 80%;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-bottom: 1px solid black; }
+    #home form textarea {
+      width: 80%;
+      height: 5rem;
+      background-color: rgba(255, 255, 255, 0.55);
+      padding: .5rem;
+      resize: none;
+      outline: none; }
+    #home form input[type="submit"] {
+      padding: .3rem .5rem;
+      color: #212529;
+      background-color: transparent;
+      border: 1px solid #212529;
+      cursor: pointer;
+      border-radius: 4px;
+      transition: all .2s ease-in-out; }
+      #home form input[type="submit"]:hover {
+        background-color: #198754;
+        color: white;
+        border-color: transparent; }
