--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -1,29 +1,22 @@
-<div class="card text-center mx-auto w-50">
-    <h5 class="card-header">Welcome to codial</h5>
-    <div class="card-body w-75 m-auto">
-        <h5 class="card-title">Codial Sign Up</h5>
-        <form action="./create" method="post">
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">Name</span>
-                <input type="text" class="form-control" placeholder="Enter your name" aria-label="Name" name="name"
-                    aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">Email</span>
-                <input type="email" class="form-control" placeholder="Username" aria-label="Username" name="email"
-                    aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">Password</span>
-                <input type="password" class="form-control" placeholder="Password" aria-label="Password" name="password"
-                    aria-describedby="basic-addon1">
-            </div>
-            <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">Confirm Password</span>
-                <input type="password" class="form-control" placeholder="Password" aria-label="Confirm Password" name="confirm_password"
-                    aria-describedby="basic-addon1">
-            </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-        </form>
-    </div>
+<div>
+    <h5>Codial Sign Up</h5>
+    <form action="./create" method="post">
+        <div>
+            <span>Name</span>
+            <input type="text" placeholder="Enter your name" name="name">
+        </div>
+        <div>
+            <span>Email</span>
+            <input type="email" placeholder="Username" name="email">
+        </div>
+        <div>
+            <span>Password</span>
+            <input type="password" placeholder="Password" name="password">
+        </div>
+        <div>
+            <span>Confirm Password</span>
+            <input type="password" placeholder="Password" name="confirm_password">
+        </div>
+        <button type="submit">Sign Up</button>
+    </form>
 </div>
