--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,10 +3,10 @@
 
     <div>
     <% if (locals.user){%>
-        <a href="./sign-out"><button data-name="sign-out">Sign Out</button></a>
+        <a href="/user/sign-out"><button data-name="sign-out">Sign Out</button></a>
     <%}else{%>
-        <a href="./sign-in"><button>Sign In</button></a>
-        <a href="./sign-up"><button>Sign Up</button></a>        
+        <a href="/user/sign-in"><button>Sign In</button></a>
+        <a href="/user/sign-up"><button>Sign Up</button></a>        
     <%}%>
     </div>
 </header>
