--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -32,7 +32,7 @@
   #home section {
     width: 80%; }
     #home section .card {
-      width: 60%;
+      width: 70%;
       border: 1px solid #dee0e1;
       background-color: #fff;
       padding: 0.6rem;
@@ -50,10 +50,15 @@
           height: 2.5em;
           border-radius: 50%;
           margin-right: .5em; }
-        #home section .card .info div > :first-child {
-          font-weight: 500; }
-        #home section .card .info div > :last-child {
-          font-size: .9em; }
+        #home section .card .info div {
+          flex-grow: 1; }
+          #home section .card .info div > :first-child {
+            font-weight: 500; }
+          #home section .card .info div > :last-child {
+            font-size: .9em; }
+        #home section .card .info a > span {
+          font-size: 1.3em;
+          color: black; }
       #home section .card .content {
         text-align: justify;
         line-height: 1.4em; }
