Added profile update and view

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,8 +1,11 @@
+a {
+  text-decoration: none;
+  color: black; }
+
 #home {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-color: #f1f2f2; }
+  align-items: center; }
   #home > form {
     width: 80%;
     padding: 1rem;
@@ -29,54 +32,74 @@
         background-color: #198754;
         color: white;
         border-color: transparent; }
-  #home section {
-    width: 80%; }
-    #home section .card {
-      width: 70%;
-      border: 1px solid #dee0e1;
-      background-color: #fff;
-      padding: 0.6rem;
-      margin: 0.3rem 0; }
-      #home section .card > :not(:last-child) {
-        margin-bottom: .4em; }
-      #home section .card .info {
-        width: 100%;
+  #home > div {
+    width: 80%;
+    display: flex;
+    justify-content: space-between; }
+    #home > div section {
+      width: 70%; }
+      #home > div section .card {
+        border: 1px solid #dee0e1;
+        background-color: #fff;
+        padding: 0.6rem;
+        margin: 0.3rem 0; }
+        #home > div section .card > :not(:last-child) {
+          margin-bottom: .4em; }
+        #home > div section .card .info {
+          width: 100%;
+          display: flex;
+          align-items: center; }
+          #home > div section .card .info * {
+            font-size: .95em; }
+          #home > div section .card .info img {
+            width: 2.5em;
+            height: 2.5em;
+            border-radius: 50%;
+            margin-right: .5em; }
+          #home > div section .card .info div {
+            flex-grow: 1; }
+            #home > div section .card .info div > :first-child {
+              font-weight: 500; }
+            #home > div section .card .info div > :last-child {
+              font-size: .9em; }
+          #home > div section .card .info a > span {
+            font-size: 1.3em;
+            color: black; }
+        #home > div section .card .content {
+          text-align: justify;
+          line-height: 1.4em; }
+          #home > div section .card .content::first-letter {
+            text-transform: capitalize; }
+        #home > div section .card .comment-post {
+          display: flex; }
+          #home > div section .card .comment-post > :first-child {
+            flex-grow: 1;
+            padding: 0.1rem; }
+          #home > div section .card .comment-post button {
+            margin-left: .6rem;
+            padding: .1rem;
+            cursor: pointer; }
+        #home > div section .card .comments {
+          padding: .3em 0;
+          margin-left: 2em;
+          width: 80%;
+          border-top: 1px solid #212529; }
+          #home > div section .card .comments * {
+            font-size: .85em; }
+    #home > div aside {
+      width: 20%; }
+      #home > div aside .friends {
+        background-color: rgba(255, 255, 255, 0.55);
         display: flex;
-        align-items: center; }
-        #home section .card .info * {
-          font-size: .95em; }
-        #home section .card .info img {
-          width: 2.5em;
-          height: 2.5em;
-          border-radius: 50%;
-          margin-right: .5em; }
-        #home section .card .info div {
-          flex-grow: 1; }
-          #home section .card .info div > :first-child {
-            font-weight: 500; }
-          #home section .card .info div > :last-child {
-            font-size: .9em; }
-        #home section .card .info a > span {
-          font-size: 1.3em;
-          color: black; }
-      #home section .card .content {
-        text-align: justify;
-        line-height: 1.4em; }
-        #home section .card .content::first-letter {
-          text-transform: capitalize; }
-      #home section .card .comment-post {
-        display: flex; }
-        #home section .card .comment-post > :first-child {
-          flex-grow: 1;
-          padding: 0.1rem; }
-        #home section .card .comment-post button {
-          margin-left: .6rem;
-          padding: .1rem;
-          cursor: pointer; }
-      #home section .card .comments {
-        padding: .3em 0;
-        margin-left: 2em;
-        width: 80%;
-        border-top: 1px solid #212529; }
-        #home section .card .comments * {
-          font-size: .85em; }
+        align-items: center;
+        padding: .2rem;
+        font-size: .85rem;
+        margin: .2rem 0;
+        border: 1px solid #dee0e1; }
+        #home > div aside .friends img {
+          height: 2.5rem;
+          width: 2.5rem;
+          margin-right: .2rem; }
+        #home > div aside .friends div > :first-child {
+          font-weight: 500;
+          font-size: .9rem; }
