--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -9,34 +9,37 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh; }
-  body #header > header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #212529; }
-    body #header > header div {
-      padding: .3rem; }
-      body #header > header div:first-child {
-        font-size: 1.5rem;
-        color: white; }
-      body #header > header div:last-child button {
-        padding: .2rem .3rem;
-        color: white;
-        background-color: transparent;
-        border: 1px solid white;
-        cursor: pointer;
-        border-radius: 4px;
-        transition: all .2s ease-in-out; }
-        body #header > header div:last-child button:hover {
-          background-color: white;
-          color: black;
-          border-color: transparent; }
-        body #header > header div:last-child button[data-name="sign-out"]:hover {
-          background-color: #dc3545;
+  body #header {
+    position: sticky;
+    top: 0px; }
+    body #header > header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #212529; }
+      body #header > header div {
+        padding: .3rem; }
+        body #header > header div:first-child {
+          font-size: 1.5rem;
           color: white; }
+        body #header > header div:last-child button {
+          padding: .2rem .3rem;
+          color: white;
+          background-color: transparent;
+          border: 1px solid white;
+          cursor: pointer;
+          border-radius: 4px;
+          transition: all .2s ease-in-out; }
+          body #header > header div:last-child button:hover {
+            background-color: white;
+            color: black;
+            border-color: transparent; }
+          body #header > header div:last-child button[data-name="sign-out"]:hover {
+            background-color: #dc3545;
+            color: white; }
   body #body {
     flex-grow: 1;
-    background-color: #f8f9fa; }
+    background-color: #f1f2f2; }
   body #footer > div {
     display: flex;
     justify-content: flex-start;
