--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -21,6 +21,7 @@ a{
         align-items: center;
         justify-content: space-evenly;
         border-bottom: 1px solid black;
+        margin-bottom: .5rem;
 
         textarea{
             width: 80%;
