--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,9 @@
     <!-- Default Style Sheet -->
     <link rel="stylesheet" href="/css/layout.css">
 
+    <!-- JQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
     <!-- Components Style Sheet -->
     <%- style%>
 </head>
